# Rehab-ai-python

./: .env.example  .gitignore  Dockerfile.api  README.md  app.py  docker-compose.yml  exercises.py  main.py  progression_state.json  pyproject.toml
api_server/: __init__.py  config.py  database.py  deps.py  exercise_factory.py  main.py  runtime.py  schemas.py  security.py  seed_demo.py  utils.py
api_server/routers/: __init__.py  auth.py  doctor.py  exercises.py  patient.py  ws.py
exercises/: __init__.py  base.py  forward_arm_raises.py  heel_raises.py  hip_abduction.py  hip_extension.py  leg_raises.py  marching.py  side_arm_raises.py  sit_to_stand.py  squats.py  wall_pushups.py
ml_scoring/: __init__.py  data_generator.py  evaluate.py  ml_scorer.py  train.py
ml_scoring/checkpoints/: lstm_best.pt  tcn_best.pt  training_histories.npz  transformer_best.pt
ml_scoring/models/: __init__.py  lstm_model.py  tcn_model.py  transformer_model.py
ml_scoring/results/: predictions.npz
ml_scoring/training_logs/: lstm_training_log.csv  tcn_training_log.csv  transformer_training_log.csv
pipeline/: __init__.py  analytics.py  feature_engine.py  feedback.py  landmark_processor.py  progression.py  scorer.py  session.py  smoother.py
